# marketing-website

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  docker-compose.yml  docker-entrypoint.sh  manage.py  package-lock.json  package.json  pyproject.toml  tailwind.config.js
.github/: FUNDING.yml
.github/workflows/: ci.yml  release.yml
.legal-content/: agb.html  avv.html  datenschutz.html  impressum.html  kuendigung.html
blog/: apps.py  feeds.py  models.py
blog/migrations/: 0001_initial.py  0002_releaseindexpage_blogauthor_blogpostpage_author_and_more.py
marketing/: apps.py  blocks.py  context_processors.py  legal_content.py  middleware.py  models.py  views.py
marketing/migrations/: 0001_initial.py  0002_legalpage_body_stream_alter_homepage_body_and_more.py  0003_alter_homepage_body_alter_legalpage_body_stream_and_more.py  0004_sectionheader_anchor_id.py
scripts/: bootstrap-kener.sh  generate_logo.py  kener-bootstrap.mjs
static/: preview.html
static/images/: logo-options.html
static/security/: mandari-pgp-key.asc
templates/: base.html
templates/blog/: blog_index.html  blog_post.html  release.html  release_index.html
templates/components/: footer.html  navbar.html
templates/marketing/: abuse.html  agb.html  barrierefreiheit.html  blog.html  blog_detail.html  crawler.html  danksagungen.html  datenschutz.html  faq.html  impressum.html  kommunen.html  kontakt.html  landing.html  legal_page.html  legal_streamfield_page.html  loesungen.html  marketing_page.html  (+17 more)
website/: settings.py  urls.py  wsgi.py
(+30 files in other folders)
